--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
@@ -57,6 +58,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
+    "wasm-image-converter": "github:ovuruska/wasm-image-converter",
     "zod": "^3.24.1"
   },
   "devDependencies": {
